--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -6,7 +6,7 @@
   <title>Gallery</title>
 </head>
 <body>
-  
+  @@include('./../components/gallery.html')
 </body>
-<script src="script.js"></script>
+<script src="gallery.js"></script>
 </html>
